--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="main-header">
   <div class="header-container">
     <a routerLink="/" class="logo">
-      <img src="assets/logo-docai.svg" alt="DocAI logo" class="logo-icon" />
-      <span class="brand-name">DocAI</span>
+      <img src="assets/logo-LlMontreal.svg" alt="LlMontreal logo" class="logo-icon" />
+      <span class="brand-name">LLMontreal</span>
     </a>
   </div>
 </header>
