--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,22 +1,20 @@
 <footer class="site-footer">
   <div class="footer-container">
+    <div class="footer-brand-social">
+      <a href="https://montreal.com.br/" target="_blank" rel="noopener">
+        <img src="assets/montreal.svg" alt="Montreal logo" class="montreal-logo">
+      </a>
+  
+      <a [href]="linkedinShare" target="_blank" aria-label="LinkedIn" class="linkedin-icon">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
     <div class="footer-links">
       <a href="#">Termos de Serviço</a>
       <a href="#">Política de Privacidade</a>
     </div>
-
-    <div class="social-icons">
-      <a [href]="facebookShare" target="_blank" aria-label="Facebook">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a [href]="twitterShare" target="_blank" aria-label="Twitter">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a [href]="linkedinShare" target="_blank" aria-label="LinkedIn">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-    </div>
-
+    
+    
     <p class="copyright">© 2025 LLMontreal. Todos os direitos reservados.</p>
   </div>
 </footer>
