--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,8 +2,9 @@
   <div class="max-w-7xl mx-auto">
     <div class="flex flex-wrap justify-between items-center gap-4 mb-6">
       <h1 class="text-3xl font-extrabold tracking-tight">Dashboard de Documentos</h1>
-      <button class="flex min-w-[84px] items-center justify-center overflow-hidden rounded-lg h-10 px-5 bg-primary text-white text-sm font-bold gap-2 hover:bg-primary/90 transition-colors" (click)="onUpload()">
-        <mat-icon>upload_file</mat-icon>
+      <button class="flex min-w-[84px] items-center justify-center overflow-hidden rounded-lg h-10 px-5 
+               bg-primary text-white text-sm font-bold gap-2 shadow-md 
+               hover:bg-primary/90 transition-colors"  (click)="onUpload()">        <mat-icon>upload_file</mat-icon>
         <span class="truncate">Enviar Novo Documento</span>
       </button>
     </div>
