--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,4 +5,7 @@
       <span class="brand-name">LLMontreal</span>
     </a>
   </div>
+      <button class="theme-toggle" (click)="toggleTheme()" [attr.aria-label]="isDark ? 'Ativar modo claro' : 'Ativar modo escuro'">
+      <i class="fas" [ngClass]="isDark ? 'fa-sun' : 'fa-moon'"></i>
+    </button>
 </header>
