--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,3 +95,8 @@ body.dark footer {
 .theme-transition {
   transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+//LOGO MONTREAL MODO ESCURO
+body.dark .montreal-logo {
+  filter: brightness(0) invert(1);
+}
