--- a/src/app/components/doc-summary-chat/doc-summary-chat.component.scss
+++ b/src/app/components/doc-summary-chat/doc-summary-chat.component.scss
@@ -9,7 +9,7 @@
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
-  border: 1px solid, var(--color-text-light,--color-text-dark);
+  border: 1px solid, var(--color-text-light, --color-text-dark);
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   padding: 20px 24px;
@@ -27,7 +27,7 @@
   min-width: 1100px;
   margin: 0 auto;
   border-radius: 8px;
-  border: 1px solid, var(--color-text-light,--color-text-dark);
+  border: 1px solid, var(--color-text-light, --color-text-dark);
   padding: 16px 16px 10px;
   display: flex;
   flex-direction: column;
@@ -108,7 +108,7 @@
 
 .message-wrapper {
   &.ia .message {
-    background: #d3dbe7; /* slightly darker for light mode */
+    background: #d3dbe7;
     border: 1px solid #d5dde8;
     color: #111827;
     border-bottom-left-radius: 4px;
@@ -212,7 +212,6 @@
   gap: 6px;
 
 }
-
 
 @keyframes bounce {
 
