--- a/src/app/components/upload-document/upload-document.component.scss
+++ b/src/app/components/upload-document/upload-document.component.scss
@@ -43,7 +43,7 @@ h2 {
     justify-content: center;
     gap: 0.75rem;
     cursor: pointer;
-    // width: 100%;
+    width: 100%;
     height: 100%;
 
     p {
