--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,22 @@ html, body {
   font-family: var(--font-family-display);
   color: var(--color-text-light);
   transition: background-color 0.3s ease, color 0.3s ease;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
 }
 
 body.dark {
